# cuckoo_nest

./: .gitignore  CMakeLists.txt  README.md  config.emulation.json  config.example.json  config.json  install_deps.sh
.github/workflows/: main-build.yml
cmake/: arm-toolchain.cmake
include/: logger.h
src/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.hpp  ScreenManager.cpp  ScreenManager.hpp  main.cpp
src/HAL/: Backlight.cpp  Beeper.cpp  Beeper.hpp  Display.cpp  Display.hpp  IDisplay.hpp  Inputs.cpp  Inputs.hpp
src/Integrations/: ActionHomeAssistantService.hpp  CurlWrapper.hpp  CurlWrapperJson.cpp  CurlWrapperJson.hpp  HomeAssistantCreds.hpp  HomeAssistantDimmer.hpp  HomeAssistantSwitch.hpp  IntegrationActionBase.hpp  IntegrationContainer.cpp  IntegrationContainer.hpp  IntegrationDimmerBase.hpp  IntegrationSwitchBase.hpp
src/Screens/: AnalogClockScreen.cpp  AnalogClockScreen.hpp  DimmerScreen.cpp  DimmerScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  MenuIcon.hpp  MenuItem.hpp  MenuScreen.cpp  MenuScreen.hpp  ScreenBase.hpp  SwitchScreen.cpp  SwitchScreen.hpp
tests/: CMakeLists.txt  README.md  build_and_run.sh  manual_config_test.cpp  test_configuration_reader.cpp  test_screen_manager.cpp
tests/ScreenStubs/: DimmerScreen.cpp
tests/spdlog/: spdlog.h
